--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(UPS_Scrabble_server)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Network.cpp stdafx.h Network.h Game.cpp Game.h Player.cpp Player.h App.cpp App.h)
+set(SOURCE_FILES main.cpp Network.cpp stdafx.h Network.h Game.cpp Game.h Player.cpp Player.h App.cpp App.h GameManager.cpp GameManager.h)
 add_executable(UPS_Scrabble_server ${SOURCE_FILES})
